Added ability to limit number of returned users, added background.